--- a/Notebooks/Text_Cleaning_and_KMeans.ipynb
+++ b/Notebooks/Text_Cleaning_and_KMeans.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Import Necessary Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 180,
    "metadata": {},
@@ -39,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Load in Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -58,134 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>content</th>\n",
-       "      <th>category</th>\n",
-       "      <th>gensim_summary</th>\n",
-       "      <th>first_100</th>\n",
-       "      <th>sent_tokenized</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Agent Cooper in Twin Peaks is the audience: on...</td>\n",
-       "      <td>And never more so than in Showtime’s new...</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>In the second season finale, back in 1991, the...</td>\n",
-       "      <td>And never more so than in Showtime’s new serie...</td>\n",
-       "      <td>['      And never more so than in Showtime’s n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AI, the humanity!</td>\n",
-       "      <td>AlphaGo’s victory isn’t a defeat for hum...</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>When speaking to DeepMind and Google developer...</td>\n",
-       "      <td>AlphaGo’s victory isn’t a defeat for humans — ...</td>\n",
-       "      <td>['      AlphaGo’s victory isn’t a defeat for h...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Massive attack</td>\n",
-       "      <td>How a weapon against war became a weapon...</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>International visitors for the event are commo...</td>\n",
-       "      <td>How a weapon against war became a weapon again...</td>\n",
-       "      <td>['      How a weapon against war became a weap...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Brain drain</td>\n",
-       "      <td>Genius quietly laid off a bunch of its e...</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>In a post on the Genius blog at the time, co-f...</td>\n",
-       "      <td>Genius quietly laid off a bunch of its enginee...</td>\n",
-       "      <td>['      Genius quietly laid off a bunch of its...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Facebook takes flight</td>\n",
-       "      <td>Inside the test flight of Facebook’s fir...</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>But if your goal is to stay in the air for a l...</td>\n",
-       "      <td>Inside the test flight of Facebook’s first int...</td>\n",
-       "      <td>['      Inside the test flight of Facebook’s f...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0  Agent Cooper in Twin Peaks is the audience: on...   \n",
-       "1                                  AI, the humanity!   \n",
-       "2                                     Massive attack   \n",
-       "3                                        Brain drain   \n",
-       "4                              Facebook takes flight   \n",
-       "\n",
-       "                                             content  category  \\\n",
-       "0        And never more so than in Showtime’s new...  Longform   \n",
-       "1        AlphaGo’s victory isn’t a defeat for hum...  Longform   \n",
-       "2        How a weapon against war became a weapon...  Longform   \n",
-       "3        Genius quietly laid off a bunch of its e...  Longform   \n",
-       "4        Inside the test flight of Facebook’s fir...  Longform   \n",
-       "\n",
-       "                                      gensim_summary  \\\n",
-       "0  In the second season finale, back in 1991, the...   \n",
-       "1  When speaking to DeepMind and Google developer...   \n",
-       "2  International visitors for the event are commo...   \n",
-       "3  In a post on the Genius blog at the time, co-f...   \n",
-       "4  But if your goal is to stay in the air for a l...   \n",
-       "\n",
-       "                                           first_100  \\\n",
-       "0  And never more so than in Showtime’s new serie...   \n",
-       "1  AlphaGo’s victory isn’t a defeat for humans — ...   \n",
-       "2  How a weapon against war became a weapon again...   \n",
-       "3  Genius quietly laid off a bunch of its enginee...   \n",
-       "4  Inside the test flight of Facebook’s first int...   \n",
-       "\n",
-       "                                      sent_tokenized  \n",
-       "0  ['      And never more so than in Showtime’s n...  \n",
-       "1  ['      AlphaGo’s victory isn’t a defeat for h...  \n",
-       "2  ['      How a weapon against war became a weap...  \n",
-       "3  ['      Genius quietly laid off a bunch of its...  \n",
-       "4  ['      Inside the test flight of Facebook’s f...  "
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "#df.head()"
    ]
   },
   {
@@ -211,15 +104,6 @@
    "outputs": [],
    "source": [
     "df['tokenized_first_100'] = df.first_100.apply(lambda x: word_tokenize(x, language = 'en'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.head()"
    ]
   },
   {
@@ -300,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#initialize WordNetLemmatizer class\n",
+    "#initialize WordNetLemmatizer\n",
     "lemmatizer = nltk.stem.WordNetLemmatizer()"
    ]
   },
@@ -352,6 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Checkpoint -- save to csv\n",
     "#df.to_csv('df_with_lemmings.csv')"
    ]
   },
@@ -379,15 +264,6 @@
     "from nltk.corpus import words\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "import ast"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.head()"
    ]
   },
   {
@@ -584,29 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "stemmer = PorterStemmer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 421,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = ['words', 'word', 'running', 'ran']"
    ]
   },
   {
@@ -660,6 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop specific duplicate rows\n",
     "df = df[~df['stemmed'].str.contains(\"archiveteam.org contain\", case=False)]"
    ]
   },
@@ -715,40 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create list of stemmed document strings\n",
     "documents = df['stemmed'].to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['never showtim new seri reviv spoiler ahead episod season twin peak may 21st showtim brought back david lynch groundbreak tv seri twin peak fulfil propheci process second season final back 1991 spirit series-defin murder victim laura palmer told fbi special agent seri protagonist dale cooper see 25 years. clip play first episod lynch twin peak reviv remind decad fact gone laura promis',\n",
-       " 'alphago victori defeat human opportun loss human man succumb machin heard alphago latest exploit last week crush world best go player confirm artifici intellig master ancient chines board game may heard news deliv doomsday terms.ther certain melancholi ke jie capitul sure 19-year-old chines prodigi declar would never lose ai follow alphago earthshak victori lee se-dol last year see onstag last week nearli bent doubl',\n",
-       " 'weapon war becam weapon web everi year artist technolog enthusiast meet linz austria ar electronica festiv meetup citi downtown locat danub river festiv eye toward futur someth burn man ted confer visitor navig scientif equip led light color instal intern visitor event common enough 1998 festiv featur unlik particip pentagon.that year member art group call electron disturb theater']"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "documents[:3]"
+    "#preview list\n",
+    "#documents[:3]"
    ]
   },
   {
@@ -803,6 +644,7 @@
     }
    ],
    "source": [
+    "#vectorized the list of stemmed documents\n",
     "documents_vectorized = vectorize_texts(documents)"
    ]
   },
@@ -813,33 +655,6 @@
    "outputs": [],
    "source": [
     "#kmeans3 = cluster_texts(3, documents_vectorized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#kmeans3.labels_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test = documents_vectorized.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#score = calinski_harabaz_score(test, kmeans3.labels_)"
    ]
   },
   {
@@ -954,64 +769,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = \"\"\"Drivers don’t always realize that they may be overpaying for car insurance. If you haven't compared quotes\n",
-    "recently, even if you have a low rate, you could still be paying too much. Fortunately, millions of smart drivers have\n",
-    "used EverQuote™'s free service to save hundreds on their insurance bills. It’s really no wonder that with so many \n",
-    "drivers saving money, EverQuote™ is gaining momentum. EverQuote™ is an efficient source that tries to give consumers\n",
-    "the lowest rates with tools you can trust. Just imagine what you could do with the money you save!\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k_list = [kmeans3, kmeans4, kmeans5, kmeans6, kmeans7, kmeans8, kmeans9, kmeans10, kmeans11, kmeans12]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, ..., 0, 0, 0], dtype=int32)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kmeans3.labels_"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "kmeans_df = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in k_list:\n",
-    "    labels = i.labels_\n",
-    "    kmeans_df[i] = labels"
    ]
   },
   {
@@ -1088,20 +850,6 @@
    "outputs": [],
    "source": [
     "kmeans_df = pd.read_csv('../Modelskmeans_df.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.plot([3, 4, 5, 6, 7], CH_score)\n",
-    "# plt.xticks([3,4,5,6,7])\n",
-    "# plt.title(\"Calinski Harabaz Scores for Different Values of K\")\n",
-    "# plt.ylabel(\"Variance Ratio\")\n",
-    "# plt.xlabel(\"K=\")\n",
-    "# plt.show()"
    ]
   },
   {
@@ -1216,6 +964,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function to find the most common words within each cluster\n",
     "def get_most_common_words(df, df_column, num_words):\n",
     "    common_words = []\n",
     "    for i in range(0,12):\n",
@@ -1582,32 +1331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['san francisco digit ad pop onlin frequent ubiquit mani peopl use softwar block tri stop ad show facebook desktop websit luck social network found way block ad blocker tuesday facebook flip switch desktop websit essenti render ad blocker program prevent websit display ad page user visit site useless chang allow silicon valley compani serv ad',\n",
-       "       'facebook adblock plu enter digit war follow facebook announc tuesday ad-block would longer work social network tuesday facebook announc blog post would take anoth approach advert ad-block releas new way user filter ad along updat would make ad-block useless social network advertis relev well-mad ad use help us find new product servic introduc us new experi like ad show favorit band come',\n",
-       "       'articl part featur also send via email polit amp polici daili daili roundup event idea american polit written special newslett subscrib sign pleas enter email address field provid russian left two vacat compound outsid washington d.c. new york citi follow order presid obama vacat friday noon vladimir putin said follow russian foreign ministri propos expel 35 u.s. diplomat retali putin also omit obama favor',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid kitchen diplomaci russian presid vladimir putin said expel u.s. diplomat retali sanction levi moscow alleg interfer u.s. presidenti elect condemn move act kitchen diplomacy. immedi clear sanction deter kremlin futur act',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid tragedi turkey author still search attack kill 39 peopl wound least 70 shoot istanbul nightclub earli new year day yesterday isi claim respons attack describ gunman heroic soldier act order islam state highest',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid make wave new studi journal scienc advanc confirm world ocean steadili warm past five decad fli face specul repres lamar smith similar find nation ocean atmospher administr polit bias research underscor climat chang',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid russia report offic director nation intellig releas declassifi version report russian interfer u.s. elect follow senat hear subject yesterday report conclud hacker attempt meddl directli vote count russian govern order',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid star power last night golden globe award place spotlight film la la land moonlight—and meryl streep use lifetim achiev speech make polit statement bulli behavior president-elect donald trump also rose defens hollywood whose outsid foreign impli',\n",
-       "       'articl part featur also send via email atlant daili newslett stori idea imag atlant written special subscrib sign pleas enter email address field provid trump transit confirm hear trump cabinet began today senat jeff session nomine u.s. attorney gener testifi first judiciari committe among issu session defend record vote right pledg recus investig hillari clinton later day',\n",
-       "       'articl part featur also send via email polit amp polici daili daili roundup event idea american polit written special newslett subscrib sign pleas enter email address field provid member senat judiciari committe question alabama senat jeff session donald trump pick attorney gener civil-right record first day senat confirm hear retir gener john kelli trump choic head depart homeland secur said high confid u.s. intellig commun'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kmeans_df.loc[kmeans_df['kmeans12'] == 9]['stemmed'][:10].values"
+    "#check clusters manually\n",
+    "#kmeans_df.loc[kmeans_df['kmeans12'] == 9]['stemmed'][:10].values"
    ]
   },
   {
@@ -2601,6 +2330,13 @@
    ],
    "source": [
     "get_most_common_words(kmeans_10_cluster3, kmeans_10_cluster3[0], 25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After reviewing the top words in each of the clusters, they all seem to be political. This leads me to believe that cluster 3 in fact was properly clustered considering the articles were pulled from 2012-2017, right in the midst of the 2016 election period. Going forward, I will add more non-political articles to the dataset in order to adjust the class imbalance. "
    ]
   },
   {
