--- a/Notebooks/classification_models.ipynb
+++ b/Notebooks/classification_models.ipynb
@@ -652,116 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Random Forest Classifier --- STILL NEEDS TO BE RUN "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "# text_classifier = RandomForestClassifier(n_estimators=200, random_state=0)  \n",
-    "# text_classifier.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set up paramaters dictionary for grid search\n",
-    "param_grid = { \n",
-    "    'n_estimators': [100, 200,300],\n",
-    "    'max_features': ['auto',0.25, 0.33, 0.5],\n",
-    "    'max_depth' : [None,5,6,7,8],\n",
-    "    'min_samples_leaf': [0.03,0.04,0.05, 1, 2]\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfc = RandomForestClassifier()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create instance of gridsearchCV\n",
-    "#use params from above\n",
-    "CV_rfc = GridSearchCV(estimator=rfc, param_grid=param_grid, cv= 3,n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#f.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#check best paramaters from the grid search\n",
-    "CV_rfc.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#use model to predict on test set\n",
-    "rfc_pred = CV_rfc.best_estimator_.predict(X_test)\n",
-    "#check accuracy on test set\n",
-    "print('Test Accuracy score: ', accuracy_score(y_test, rfc_pred))\n",
-    "#check F1 of test set\n",
-    "print('Test F1 score: ', f1_score(y_test, rfc_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plot confusion matrix of random forest using SMOTE oversampling\n",
-    "cnf_matrix_rf_smote_CV = confusion_matrix(y_test, rfc_pred)\n",
-    "print('Confusion Matrix:\\n',cnf_matrix_rf_smote_CV)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save the model to disk\n",
-    "filename = 'rfc_model.sav'\n",
-    "pickle.dump(rf, open(filename, 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3>XG Boost Classifier"
+    "<h3>XG Boost Classifier -- TOP PERFORMER"
    ]
   },
   {
@@ -881,13 +772,6 @@
    "source": [
     "<h3>BAG OF WORDS KERAS NEURAL NETWORK"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1025,10 +909,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set optimizer and loss, test for accuracy\n",
     "model.compile(loss='categorical_crossentropy',\n",
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])"
@@ -1071,6 +956,7 @@
     }
    ],
    "source": [
+    "#run the model\n",
     "history = model.fit(x_train, y_train,\n",
     "                    batch_size=batch_size,\n",
     "                    epochs=epochs,\n",
