--- a/Notebooks/new_user_functions.ipynb
+++ b/Notebooks/new_user_functions.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Import Necessary Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -42,33 +49,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['new_user_functions.ipynb', 'scratch_notebook.ipynb', '.DS_Store', 'summarizer_cosine_similarity.ipynb', 'Images', 'Text_Cleaning_and_KMeans.ipynb', 'df_with_gensim_summaries.csv', 'kmeans_df.csv', 'df_with_stems_final.csv', 'full_df_with_gensim_summaries.csv', 'Models', 'README.md', 'df_english_articles.csv', '.gitignore', 'DB_Cleaning_EDA.ipynb', 'xgboost_model.sav', '.ipynb_checkpoints', 'classification_models.ipynb', 'all-the-news.db', '.git', 'Data', 'Notebooks', 'df_with_lemmings.csv']\n"
-     ]
-    }
-   ],
-   "source": [
-    "contents = os.listdir()\n",
-    "print(contents)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -83,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create beautiful soup object\n",
     "def create_soup(url):\n",
     "    facts = requests.get(url)\n",
     "    soup = BeautifulSoup(facts.content, 'html.parser')\n",
@@ -95,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#helper function to get text of news articles\n",
     "def get_article_text(url):\n",
-    "    #url = input('Enter a url: \\n')\n",
     "    soup = create_soup(url)\n",
     "    \n",
     "    text = []\n",
@@ -106,13 +87,6 @@
     "    full_text = ' '.join(text).replace('\\xa0', '')\n",
     "    return full_text"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -130,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initialize stemmer\n",
     "stemmer = PorterStemmer()"
    ]
   },
@@ -174,11 +149,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create helper function to stem each word in a list and concat the list\n",
+    "#helper function to stem each word in a list and concat the list\n",
     "def stem_list(lst):\n",
     "    stemmed_list = []\n",
     "    for i in lst:\n",
     "        stemmed_list.append(stemmer.stem(i))\n",
+    "    #only use first 100 words to cut down computational expense \n",
     "    stem_string = ' '.join(stemmed_list[:100])\n",
     "    return stem_string"
    ]
@@ -190,13 +166,14 @@
    "outputs": [],
    "source": [
     "#function to perform lemmatization, stemming, and final preprocessing\n",
+    "#uses above helper functions\n",
     "def xgb_text_prep(sample_text):\n",
     "    tokens = word_tokenize(str(sample_text), language = 'en')\n",
     "    no_stops = remove_stops(tokens)\n",
     "    stemmed = stem_list(no_stops)\n",
-    "    #stemmed = stemmed.replace('\\\\n', '')\n",
-    "    return [stemmed]\n",
-    "    #return no_stops"
+    "    \n",
+    "    #return a list of stemmed words to be put into xgb prediction \n",
+    "    return [stemmed]"
    ]
   },
   {
@@ -205,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function for xgboost prdiction\n",
+    "#function for xgboost prediction\n",
     "def get_xgb_prediction(text):\n",
     "    preprocess = xgb_text_prep([text])\n",
     "    return xgb.predict(preprocess)[0]"
@@ -253,17 +230,22 @@
    "outputs": [],
    "source": [
     "def build_summary(text):\n",
+    "    #call helper function\n",
     "    sents_for_sum = find_similarities(text)\n",
+    "    #sort the sentences selected for summary\n",
     "    sort = sorted(sents_for_sum)\n",
-    "    #print('\\n Sentences selected:', sort)\n",
-    "    \n",
+    "\n",
+    "    #tokenize full text\n",
     "    sent_list = sent_tokenize(text)\n",
+    "    #set number of sentences in text\n",
     "    num_sents = len(sent_list)\n",
     "    \n",
+    "    #extract selected sentences from the full text\n",
     "    sents = []\n",
     "    for i in sort:\n",
     "        sents.append(sent_list[i].replace('\\n', ''))\n",
     "    \n",
+    "    #join sentences into a summary\n",
     "    summary = ' '.join(sents)\n",
     "    return sort, num_sents, summary"
    ]
@@ -274,11 +256,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#final function to wrap it all together\n",
     "def xgb_and_summary(url):\n",
     "    text = get_article_text(url)\n",
     "    \n",
     "    xgb_preprocess = xgb_text_prep(text)\n",
+    "    \n",
     "    sents, num_sents, summary = build_summary(text)\n",
+    "    \n",
     "    xgb_predict = get_xgb_prediction(text)\n",
     "    \n",
     "    return url, sents, num_sents, xgb_predict, summary"
@@ -331,33 +316,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.OutputArea.auto_scroll_threshold = 9999;\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.auto_scroll_threshold = 9999;"
+    "<h3>NYTimes Scraper and Summarizer"
    ]
   },
   {
@@ -366,19 +328,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function to scrape all articles on NYTimes front page\n",
     "def get_ny_articles(url):\n",
     "    page = create_soup(url)\n",
-    "    #a= page.find_all('a', href = True)\n",
     "    \n",
+    "    #find all hrefs\n",
     "    ny_times_links = []\n",
     "    for a in page.find_all('a', href=True):\n",
     "        ny_times_links.append(a['href'])\n",
     "    \n",
+    "    #cut down hrefs to only those that are news articles\n",
     "    ny_times_articles = []\n",
     "    for i in ny_times_links:\n",
     "        if i[0] == '/' and len(i)>2 and i.endswith('Container') == False:\n",
     "            ny_times_articles.append(url+i)\n",
     "    \n",
+    "    #drop duplicates (if any)\n",
     "    article_set = list(set(ny_times_articles))\n",
     "    return article_set"
    ]
@@ -389,6 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get summaries for each of the NYTimes articles\n",
     "def get_all_summaries(url):\n",
     "    summaries = []\n",
     "    for i in get_ny_articles(url):\n",
@@ -405,11 +371,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h1> Test "
+   ]
   },
   {
    "cell_type": "code",
@@ -608,76 +574,6 @@
    "source": [
     "get_all_summaries('https://www.nytimes.com')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
